//指定版本
//注意proto3与proto2的写法有些不同
//protobuf官方中文文档
//https://www.jianshu.com/p/4443c28d4bf7
syntax = "proto3";

//包名，通过protoc生成时go文件时
package go_protos;

option go_package = "./go_protos";

import "txbase.proto";

message TxVoteReward {
	TxBase         TxBase       = 1;
    uint64         StartHeight  = 2; //分配奖励开始高度
    uint64         EndHeight    = 3; //分配奖励结束高度
}